<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg_green"
    tools:context=".signup_and_login.UserDetailsActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:src="@drawable/ic_arrow_back_black_24dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_first_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/tv_last_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/tv_email"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/tv_user_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:text="@string/tv_phone"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>