<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg_green"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/margin_20dp"
    tools:context=".signup_and_login.GenderFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"

        >

        <LinearLayout
            android:id="@+id/linearLayout_progress_bar"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="@dimen/heigth_12dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/custom_progress_bar_background"
            app:layout_constraintBottom_toTopOf="@id/tv_first_name"
            app:layout_constraintLeft_toLeftOf="parent">

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="90dp"
                android:layout_height="@dimen/heigth_12dp"
                android:progressDrawable="@drawable/custom_progress_bar_dot" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tell_us"
            style="@style/fragmentTextViewBehaviour"
            android:layout_below="@id/linearLayout_progress_bar"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/tv_tell_us_a_nlittle_more" />

        <TextView
            android:id="@+id/tv_my_gender_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tell_us"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/tv_my_gender_is"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout_gender_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_my_gender_is"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_male"
                style="@style/genderFragment_cardView"
                android:layout_marginRight="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/tv_male"
                    style="@style/genderFragment_male_female_other_txt"
                    android:text="@string/tv_male"
                    android:textSize="@dimen/txt_size_20sp"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_female"
                style="@style/genderFragment_cardView"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/tv_female"
                    style="@style/genderFragment_male_female_other_txt"
                    android:text="@string/tv_female"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_other"
                style="@style/genderFragment_cardView"
                android:layout_marginLeft="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/tv_other"
                    style="@style/genderFragment_male_female_other_txt"
                    android:text="@string/tv_other" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout_year_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_gender_options"
            android:layout_marginTop="@dimen/margin_20dp">

            <LinearLayout
                android:id="@+id/linearLayout_bottom_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:text="@string/tv_what_is_your_year_of_birth"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/size_18sp"

                    android:textStyle="bold"

                    />


                <ImageView
                    android:id="@+id/img_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:src="@drawable/sub_copy_more" />

            </LinearLayout>


            <com.aigestudio.wheelpicker.widgets.WheelYearPicker
                android:id="@+id/wheel_picker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_150dp"
                android:layout_below="@id/verify_linearLayout"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_toRightOf="@id/linearLayout_bottom_image"
                app:wheel_atmospheric="true"
                app:wheel_curved="true"
                app:wheel_cyclic="true"
                app:wheel_item_align="center"
                app:wheel_item_space="@dimen/space_4dp"
                app:wheel_item_text_color="@color/light_green_color"
                app:wheel_item_text_size="@dimen/txt_size_28sp"
                app:wheel_same_width="true"
                app:wheel_selected_item_text_color="#000"


                />

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_height_50dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:background="@drawable/gender_fragment_button_background"
        android:text="@string/tv_finish"
        android:textAllCaps="false"
        android:textSize="@dimen/margin_20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</android.support.constraint.ConstraintLayout>